--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Build and Deploy React app to GitHub Pages'
-description: 'GitHub Action to build and deploy React app in gh-pages branch.'
+name: 'Deploy React app to GitHub Pages'
+description: 'GitHub Action to deploy React app in gh-pages branch.'
 author: 'MrKrishnaAgarwal <@MrKrishnaAgarwal>'
 branding:
   color: 'green'
